# metts

./: .gitignore  README.md  eval.py  eval_tts.py  launch.sh  main.py  main_consistency.py  main_consistency_distil.py  main_vocoder.py  pyproject.toml  resample_audio.py  test.py  tpu_requirements.txt
config/: config.yaml  trainer.json
data/: measure_stats.json  phone2idx.json
metts/dataset/: __init__.py  data_collator.py  dataset.py  dummy.py  measure.py  plotting.py  snr.py  srmr.py
metts/evaluation/: eval_pipeline.py  metrics.py
metts/hf/: custom_trainer.py  pl.py
metts/hifigan/: __init__.py
metts/tts/: conformer_layer.py  consistency_predictor.py  convolutions.py  diffusion_vocoder.py  length_regulator.py  model.py  refinement_models.py  scaler.py  transformer.py
metts/utils/: tpu_met.py
pretrained_models/consistency/: config.json  rng_state.pth  rng_state_0.pth  rng_state_1.pth  rng_state_2.pth  rng_state_3.pth  rng_state_4.pth  rng_state_5.pth  rng_state_6.pth  rng_state_7.pth  scheduler.pt  trainer_state.json
